--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="site-header">
         <div class="site-header__container container">
            <a class="logo-link">
-               <img class="logo-img" src="" alt="logo" width="146" height="52">
+               <img class="logo-img" src="images/executive-dark.png" alt="logo" width="146" height="52">
            </a>
            <nav class="sitenav">
                <ul class="sitenav-list">
@@ -31,12 +31,38 @@
                 <li class="sitenav-item">
                     <a class="sitenav-link" href="#">Country</a>
                 </li>
-                <li class="sitenav-item sitenav-item__bordered">
-                    <a class="sitenav-link" href="#">Apply</a>
+                <li class="sitenav-item">
+                    <a class="sitenav-link sitenav-link__bordered" href="#">Apply</a>
                 </li>
                </ul>
            </nav>
         </div>
     </header>
+
+    <main class="site-main">
+        <section class="hero-section__container container">
+            <div class="hero-section__info">
+               <h1 class="hero-section__title">
+                We Help to <span class="title-accent">Build</span>
+                Your&nbsp;Dream
+               </h1>
+               <p class="hero-section__text">
+                We are  always availed to consult on taking your higher education to the next level so you can stay competitive in the
+               </p>
+               <a class="hero-section__btn" href="#">Apply Online</a>
+               <div class="hero-section__links">
+                   <a class="hero-link" href="#">
+                    <img src="images/facebook.svg" alt="facebook" width="12" height="20">
+                   </a>
+                   <a class="hero-link" href="#">
+                    <img class="twitter" src="images/twitter-dark.svg" alt="twitter" width="20" height="17">
+                   </a>
+                   <a class="hero-link" href="#">
+                    <img src="images/instagram-dark.svg" alt="instagram" width="21" height="22">
+                   </a>
+               </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
