change bg image position

--- a/index.html
+++ b/index.html
@@ -40,29 +40,35 @@
     </header>
 
     <main class="site-main">
-        <section class="hero-section__container container">
+
+
+        <section class="hero-section">
+           <div class="hero-container container">
             <div class="hero-section__info">
-               <h1 class="hero-section__title">
-                We Help to <span class="title-accent">Build</span>
-                Your&nbsp;Dream
-               </h1>
-               <p class="hero-section__text">
-                We are  always availed to consult on taking your higher education to the next level so you can stay competitive in the
-               </p>
-               <a class="hero-section__btn" href="#">Apply Online</a>
-               <div class="hero-section__links">
-                   <a class="hero-link" href="#">
-                    <img src="images/facebook.svg" alt="facebook" width="12" height="20">
-                   </a>
-                   <a class="hero-link" href="#">
-                    <img class="twitter" src="images/twitter-dark.svg" alt="twitter" width="20" height="17">
-                   </a>
-                   <a class="hero-link" href="#">
-                    <img src="images/instagram-dark.svg" alt="instagram" width="21" height="22">
-                   </a>
-               </div>
-            </div>
+                <h1 class="hero-section__title">
+                 We Help to <span class="title-accent">Build</span>
+                 Your&nbsp;Dream
+                </h1>
+                <p class="hero-section__text">
+                 We are  always availed to consult on taking your higher education to the next level so you can stay competitive in the
+                </p>
+                <a class="hero-section__btn" href="#">Apply Online</a>
+                <div class="hero-section__links">
+                    <a class="hero-link" href="#">
+                     <img src="images/facebook.svg" alt="facebook" width="12" height="20">
+                    </a>
+                    <a class="hero-link" href="#">
+                     <img class="twitter" src="images/twitter-dark.svg" alt="twitter" width="20" height="17">
+                    </a>
+                    <a class="hero-link" href="#">
+                     <img src="images/instagram-dark.svg" alt="instagram" width="21" height="22">
+                    </a>
+                </div>
+             </div>
+           </div>
         </section>
+
+        
     </main>
 </body>
 </html>
