--- a/index.html
+++ b/index.html
@@ -68,6 +68,44 @@
            </div>
         </section>
 
+        <section class="universities-section">
+            <div class="universities__container container">
+               <h2 class="university-title">
+                Featured Universities
+               </h2>
+               <div class="universities-brands">
+                   <a class="university__link" href="#">
+                     <img src="images/macquarie-university.png" alt="macquarie-university" width="225" height="67">
+                   </a>
+                   <a class="university__link" href="#">
+                    <img src="images/charles-sturt-university.png" alt="charles-sturt-university.png" width="250" height="64">
+                   </a>
+                   <a class="university__link" href="#">
+                    <img src="images/the-university-of-newcastle.png" alt="the-university-of-newcastle.png" width="224" height="80">
+                   </a>
+                   <a class="university__link" href="#">
+                    <img src="images/latrobe-university.png" alt="latrobe-university.png" width="225" height="62">
+                   </a>
+               </div>
+
+               <ul class="corusel-list">
+                   <li class="corusel-item">
+                       <button class="corusel-btn corusel-btn__active"></button>
+                   </li>
+                   <li class="corusel-item">
+                    <button class="corusel-btn"></button>
+                </li>
+                <li class="corusel-item">
+                    <button class="corusel-btn"></button>
+                </li>
+                <li class="corusel-item">
+                    <button class="corusel-btn"></button>
+                </li>
+               </ul>
+
+            </div>
+        </section>
+
         
     </main>
 </body>
