add responsive styles

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
     <header class="site-header">
         <div class="site-header__container container">
+            <div class="menu-btn">
+                <div class="menu-btn__burger"></div>
+            </div>
             <a class="logo-link">
                 <img class="logo-img" src="images/executive-dark.png" alt="logo" width="146" height="52">
             </a>
@@ -229,6 +232,7 @@
                     <p class="news-info__text">Sunt autem nusquam hoc epicurus in gravissimo bello animadversionis metu degendae praesidia firmissima. Torquatos nostros? quos tu paulo ante cum teneam sententiam, quid bonum esse vult.</p>
                 </div>
                      <div class="events-cards">
+                         
                         <div class="event-card">
                             <div class="title-box">
                                 <p class="calendar">23 <span class="calendar-month">OCT</span></p>
@@ -408,21 +412,7 @@
                         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
                         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous"></script>
                         
-                        <script>  
-                            $('.testimonial__list').slick({
-                                dots: true,
-                                infinite: true,
-                                speed: 300,
-                                slidesToShow: 2,
-                                variableWidth: true
-                            });
-                            $('.countries-list').slick({
-                                dots: true,
-                                infinite: true,
-                                speed: 300,
-                                slidesToShow: 2,
-                                variableWidth: true
-                            });
+                        <script src="main.js/main.js">  
                         </script>
                     </body>
                     </html>
